# ChangeLog for dev-python/warlock
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/warlock/ChangeLog,v 1.3 2013/01/20 06:34:54 prometheanfire Exp $

  20 Jan 2013; Matthew Thode <prometheanfire@gentoo.org> warlock-0.7.0.ebuild:
  warlock requires jsonpatch-0.10 specifically

  17 Jan 2013; Matthew Thode <prometheanfire@gentoo.org> warlock-0.7.0.ebuild:
  forgot the [${PYTHON_USEDEP}]

*warlock-0.7.0 (17 Jan 2013)

  17 Jan 2013; Matthew Thode <prometheanfire@gentoo.org> +warlock-0.7.0.ebuild,
  +metadata.xml:
  adding warlock for python-glanceclient