@@ -2,23 +2,26 @@
 Hash: SHA256
 
 DIST warlock-0.7.0.tar.gz 7080 SHA256 cc913fe3855f95512d183d158bd0a0f4e1c4b0619041ddb44fd15af8dc86e22a SHA512 95ed036a86790e07daf648153e8c077a4b3a60e07d557a81693030bd7a9607df63ff081547064cc843fbf41d1f70043313905348b3e78c18b35d46e9ed6e534c WHIRLPOOL 3983b71044d0e25cf59fc750fbcfaa1bfbcbda5fcfcf6ebe81a5a0f2b77e061dc756836abdbb2e54e803c61fb2f6bde10cc625c0bf9488af644f0489fbc36101
+DIST warlock-1.0.1.tar.gz 4192 SHA256 986ccfd647f89c1c8e7ebe40d159e5633818a58754b3ffdf51c4816927977791 SHA512 7ca4b512efa9f3b112682b5120618b14616d3d7307891004aedbe6b88d66d5baaff5c02b9dfe78ea845cdc2498668f81c9dfc6a22fedab7916f49947dd3706c6 WHIRLPOOL a1e556668ca5a2589832fa177ea3260c50efc3a07924ad6ba830318985be8f8e6e70a6f24ed130e7d7d181b3060720f54eeff22bf709aee537c028d6a1d03f83
+EBUILD warlock-0.7.0-r1.ebuild 981 SHA256 6f6e5fbd1641e03b2374583fa3a13c96a642d5fe5807f359860459970cffa93e SHA512 867594e5574e1549e1505dd506b113b1b4f3583be7886c4e53ea36d0f065d10063cef7561a4948c96812d08d2527334e384bbcfa65f9af3552b4166b05f1969a WHIRLPOOL fb9400ec74764368992f886923f91181fa7da099cbeedab4bd8488f6d1e7766b0a485daec2969ac6bc8cb33f6276c49c6054c239490d1d4d5bcce33fc07ba265
 EBUILD warlock-0.7.0.ebuild 874 SHA256 fdfe21096902b6f86f6c93383361bb9655baa1078dd8f66c14b87e454644aa04 SHA512 09b149d82e6e6f6dab12950f0c0603ce6c76829b57d6f641e88466a372295f55cd80a6c407e61c669f022842f51b0db85ab5b65d6b4dc396023df53ba414fd69 WHIRLPOOL 34629432a9ce66963d6e82d9a8ecf7e520e801022c2e66267c7834b345c1a5de20a01ee9d66e70d7d0fbdec9bb9e476d155c0991ea2a32f41eb059b21c17da3f
-MISC ChangeLog 624 SHA256 6e7e02f6fc4a4e1f51f3f3f9afd45ae37997a40fec8e89cff67698811f6ae719 SHA512 ec417e37ec7860251d2ce5795b9d4988f760f5fe5fb85548bc12246238212fb1d19bc8143bbb5fcaa8d69564316e5d9b80da88f5b2a1fa1823045a633e92ff74 WHIRLPOOL dacad7c742d60d76bca4d8f110f0a5c60cd201475df33e72c8e440a45efc1265e29d607331c0a79cff9ca664d8924e6b330ddbe8793f3047b810545ddecbd66a
+EBUILD warlock-1.0.1.ebuild 1142 SHA256 80b806991776460a4705b438216c9976ec6bc83793b15e9fde032c6d4f4489ec SHA512 9972556b74464130cb5fe6fa0a87767a2874f4f9e42a8964f22d013f30c8fc43c8d00a004e87c29a2e94ce20cd6388a6ac51573185a6b37034d88aba8726229f WHIRLPOOL f340a89692de3c9b28e6f7c35541ed52aa50c45160869d1f73580d0c46abfe6098a8fff8ef53c501702b299f4cbfd513b151b2c5de7ee1207b95d658b5481763
+MISC ChangeLog 812 SHA256 46966e8b3a5429445bc1838b8ca8da4610c65408dc1ca3337e6011a62a9a2351 SHA512 5ff6c6e1801a3fe71d420c826504f5156ffd9c222ba43acdbede087432098ab59590015dac8be1276636530c04ceec9666443c5aecb8aa86600beb8ae0935a68 WHIRLPOOL 2e3e24fd2471e1dbecc8ef3a9e671a5998257feaa9b5c75cb5bf8f7ba0b8b35b36ec6b6156ec0411c8e6a6cfcad49050a70ce8a5a90991d4fd75e428152d90a5
 MISC metadata.xml 378 SHA256 3ca834163ee919b15c56d07f593be83c625ef62d612f11d65d52913a456d46bf SHA512 3c47907f55036195ed7c615d1ec9d29aa96aeb6af28764438a1130eb5a3b0bc657b7e5b2ed985e0799bf017d500951048e4a6cf9f7870e4b6ca119c450da42d2 WHIRLPOOL 3bb63b15180e49c3415f3131b785aa037b0986dab3d1bad08cc7698b6bf5e08c3bd80f44ac4cee0a2259abdece6d1eefc41d5b903c8f1cd98cee84a100a8c8ea
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQ+5AWAAoJECRx6z5ArFrD+38QAKFz3XsivE/NCa5B5HM4Fazj
-ylLo+LPz+/UfL9q5uOVB28W/thNP3Dze6vksLzqTkS4VPirRPngu2/pRHMH+M+Ie
-1+IR+K1Wwam0LO893+QWD/MKgE/IIgmZVZEjAwt+PYIJ5BdcXgvtpIK/j/wsI1py
-VPodd1UFNEnTdrCjpnYbTcw/c1SCoCGA4bQwbu/MYMoOU3ppbYNkxvxNfuYh3MNr
-eq8O5gylfwxKOjsQPPdMshkKmy26X6prVnhSh1p8M4AmUvNqhYC3ohWyLpe/zUCc
-D6xzk2/rMgOA8KUX4OZFv0W0+DdHyVpf5nrmZQon+ORG3sutV9n9CyBT1GltVcGK
-C4iMqcsHnAbXJ5+MW7xIV4J2atUbDqNqEbJSGLE0YBGeGPEx53mfhtLhx7J8mlVk
-M1HEaizVFv4ciOvZcOpMUUq2ljUZmyZ9/URsqTJtjs3mHbNguo2UScBwuUl67mgE
-4tQVpd0f/Escp+bKdDqkyosnqdqUpHQ27c1yZV7BJY95/Z0sxiQzEjGd9sycdrh/
-JbuBlQyuttFk4qVr2BNLY6J72PQcy1rdiRGpAUCLlzL4Bk0MlRxNd66L9Xu2wtmG
-qo4OquD3PhVVE/vkrM4Vppwqni8+uQPHtHXIpO2udkUfdrXRMcGOJZsuwudoEY+i
-8zL3ITze1o+WkS4cD/ba
-=bDIP
+iQIcBAEBCAAGBQJSgcMAAAoJECRx6z5ArFrDddkP/RQmkUBRHllxilrJFilhd6ok
+BCQKCzYaUd5Tbx5pFDzZlqrh8ulSNWp2xe7kVKDw1IQoy1Ge/bDLGtAJ1yUhxpS5
+Xfa/HRwXis79Isi9qmS73eybl0IqNPpuVCttHBMjPCkB/4q708IUZMB4prkoImyw
+0ea9WQnTZ0FbvpPiSgC/obHnyUFNYwH9V5ma4MVAOeo443l8jmwK8Xt9UFR/u96J
+vhvQc9UQf5OUBQbaVdyU2VIuonIcWlkXRxyeXBj6a8X58RODiJUrPJE998brp26q
+rXgVuEaF2oblalobtAHhSVp6PAE1+uDRTUR3yU7RTwKk3MFQjPYQH6cZDbrxK3/c
+z5MWk7v6uY0BpOTV6eLUn6cV4UE3j0C5ekPjoTUaSjl5r91aGbLxMuu/mskLCVPA
+6njV628n7ao/aJr2x4aXJasLeTR6hO4PvV29i/f3Fa984+UA5G16RoT6QVSqtrHp
+yMf7iEN2/2S1Nj8SSfuICs7HmwtF0DoyhYduKb74YkvbnjCgALnrSkJtK8Y8Tsx9
+YK3Nq+AGnYHn78fz/1+teU1DUAgSB5NYHrMPWbjRxwR6izyQ6P4bUe50YI1aTc06
+6TuDf9FRWynFzb9E+d3wbZdp5nQmpIPfLWZ9Ofw7plW2Jk/7shQQ6/B62qLHJBVU
+tOFrQbG+GLdry9gLMgqH
+=urwJ
 -----END PGP SIGNATURE-----
