@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=dev-python/setuptools[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] test? ( virtual/python-unittest2[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] =dev-python/jsonpatch-0.10[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/jsonschema-0.7[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <dev-python/jsonschema-1[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) userland_GNU? ( >=sys-apps/coreutils-8.5 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
+DESCRIPTION=Python object model built on JSON schema and JSON patch
+EAPI=5
+HOMEPAGE=http://github.com/bcwaldon/warlock
+IUSE=test python_targets_python2_7
+KEYWORDS=~amd64 ~x86
+LICENSE=Apache-2.0
+RDEPEND==dev-python/jsonpatch-0.10[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/jsonschema-0.7[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <dev-python/jsonschema-1[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
+REQUIRED_USE=|| ( python_targets_python2_7 )
+SLOT=0
+SRC_URI=mirror://pypi/w/warlock/warlock-0.7.0.tar.gz
+_eclasses_=distutils-r1	49574f07941f70e03dd1bfa59be559be	eutils	4878e7f88afc0ba0866ac112190b0fd4	multibuild	56d4120419072116417e8de1bd1040ff	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	89580da5ec17ad687fcde876c542b91e	python-r1	b81583006559e9b008883355c9889e29	python-utils-r1	49ee0ca5e1019d8f256a23692dad2642	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=090630df00037ae38690b8884f6c5c3b
